--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 		<p class="text-center">
 			<label><input type="checkbox" name="ability" id="ability">&nbsp; Ignore abilities</label>
 			<label><input type="checkbox" name="final-evo" id="final-evo">&nbsp; Fully Evolved Only</label>
+			<label><input type="checkbox" name="mega" id="mega">&nbsp; Exclude Mega</label>
 		</p>
 		<p class="text-center">
 			<label>Find best combos of x types: <input id="nbcombo" type="number" min="0" max="18"></label>
