Add Scrappy option

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 			<label><input type="checkbox" name="ability" id="ability">&nbsp; Ignore abilities</label>
 			<label><input type="checkbox" name="final-evo" id="final-evo">&nbsp; Fully Evolved Only</label>
 			<label><input type="checkbox" name="mega" id="mega">&nbsp; Exclude Mega</label>
+			<label><input type="checkbox" name="scrappy" id="scrappy">&nbsp; Has Scrappy/Mind's Eye</label>
 		</p>
 		<p class="text-center">
 			<label>Find best combos of x types: <input id="nbcombo" type="number" min="0" max="18"></label>
