Added Freeze Dry and moves that force pokémon to touch ground

--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
 			<label class="tooltip"><input type="checkbox" name="scrappy" id="scrappy">&nbsp; Has Scrappy/Mind's Eye
 				<span class="tooltiptext">Ignore Ghost immunities</span>
 			</label>
+			<label class="tooltip"><input type="checkbox" name="freezedry" id="freezedry">&nbsp; Has Freeze-Dry
+				<span class="tooltiptext">Ice-type move supereffective on Water-type</span>
+			</label>
+			<label class="tooltip"><input type="checkbox" name="grounded" id="grounded">&nbsp; Affected by Gravity/Smack Down/Thousand Arrows
+				<span class="tooltiptext">Ignore Flying and Levitate immunity to Ground-type moves</span>
+			</label>
 		</p>
 		<p class="text-center">
 			<label>Find best combos of x types: <input id="nbcombo" type="number" min="0" max="18"></label>
