Add Tinted Lens

--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
 			<label class="tooltip"><input type="checkbox" name="scrappy" id="scrappy">&nbsp; Has Scrappy/Mind's Eye
 				<span class="tooltiptext">Ignore Ghost immunities</span>
 			</label>
+			<label class="tooltip"><input type="checkbox" name="tintedlens" id="tintedlens">&nbsp; Has Tinted Lens
+				<span class="tooltiptext">Damage x2 on resistance</span>
+			</label>
 			<label class="tooltip"><input type="checkbox" name="freezedry" id="freezedry">&nbsp; Has Freeze-Dry
 				<span class="tooltiptext">Ice-type move supereffective on Water-type</span>
 			</label>
