Add flying press

--- a/index.html
+++ b/index.html
@@ -51,6 +51,9 @@
 			<label class="tooltip"><input type="checkbox" name="grounded" id="grounded">&nbsp; Affected by Gravity/Smack Down/Thousand Arrows
 				<span class="tooltiptext">Ignore Flying and Levitate immunity to Ground-type moves</span>
 			</label>
+			<label class="tooltip"><input type="checkbox" name="flying_press" id="flying_press">&nbsp; Show Flying Press
+				<span class="tooltiptext">Add Flying Press to the type selection</span>
+			</label>
 		</p>
 		<p class="text-center">
 			<label>Find best combos of x types: <input id="nbcombo" type="number" min="0" max="18"></label>
